refactor: record 파일 내의 builder 제거